Activity04/todo-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-service

spec:
  selector:
    app: todo

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
